--- a/scott.org
+++ b/scott.org
@@ -1,80 +1,85 @@
-
-* DONE Make sketch of poster
-  DEADLINE: <2017-08-22 Tue>
-
-* DONE Write descripton of Job (Technical Writer). 
-  DEADLINE: <2017-08-21 Mon>
-
-* TODO Ticket for Tyler 
-  DEADLINE: <2017-08-24 Thu>
-
-* TODO Look over POC Acquisition board
-  DEADLINE: <2017-08-24 Thu>
-
-* TODO Look at haskell weekly stuff 
-  DEADLINE: <2017-08-26 Sat>
-
-* TODO Release Onping
-  DEADLINE: <2017-08-24 Thu>
-
-* TODO Run tests 
-  DEADLINE: <2017-08-24 Thu>
-
 * TODO Run swap in ATS
-* TODO Do hello world and guessing game tutorial                       :Rust:
-* TODO Do some proof theory examples                                   :MATH:
-* TODO Tensor Flow install                                  :MachineLearning:
-* Notes on Spotfire
+* TODO Do hello world and guessing game tutorial :Rust:
+* TODO Do some proof theory examples :MATH:
+* TODO Notes on Spotfire
 ** TODO Web Services. 
 ** TODO API Services (R, Python)
 ** TODO Email links on Add On
-* Notes on Onping improvements
 * TODO Code efficient [[https://en.wikipedia.org/wiki/Cornish%E2%80%93Fisher_expansion][Cornish Fisher]]
-* TODO 2 Blue XL's for Shea and Shane
-** TODO make sure this is getting done   
-   DEADLINE: <2017-08-31 Thu>
+* TODO 2 Blue XL's need to go there
+  DEADLINE: <2017-11-28 Tue>
 
-* TODO Copy in evaluations 
-  DEADLINE: <2017-08-24 Thu>
+* Notes from interesting commerce meeting
+** TODO Fill out Confidential Biz profile 
+   DEADLINE: <2017-11-27 Mon>
+** TODO Email Ashley Wilson and Joe Genet 
+   DEADLINE: <2017-11-27 Mon>
+On oklahoma trade partners thing
+* TODO Look over PCB for blink 1.1
+  DEADLINE: <2017-11-27 Mon>
+* DONE Corey Biggalow Comms info
+* TODO Update timeline for LS project
+  DEADLINE: <2018-01-20 Sat>
+* TODO Get Alarm Query for Shea
+  DEADLINE: <2017-11-27 Mon>
 
-* TODO Finish evaluations 
-  DEADLINE: <2017-08-25 Fri>
+Would it be possible for you to write a report and send me results for amount of alarms we had in June 17 
+for the month and how many alarms we had for September 17 and possibly break that down to runfails?
+* TODO Make sure unsigned tickets list update was sent
+  DEADLINE: <2017-11-27 Mon>
+* TODO Check with Camino Jon Moran on status
+  DEADLINE: <2017-12-11 Mon>
+* TODO Basin Invoice 
+  DEADLINE: <2017-11-27 Mon>
+Last bill was <2017-09-20 Wed> to <2017-10-04 Wed>
+Dead period was <2017-10-17 Tue> to <2017-10-28 Sat>
+Dead period was <2017-11-01 Wed> to <2017-11-15 Wed>
+* TODO Ask Jack about tickets 
+  DEADLINE: <2017-12-06 Wed>
+* DONE Begin Wapiti proposal
+  DEADLINE: <2017-12-06 Wed>
 
-* TODO Respond to LS 
-  DEADLINE: <2017-08-24 Thu>
-
-* TODO Review Terry Writing
-  DEADLINE: <2017-08-25 Fri>
+* DONE Begin Intensity proposal 
+  DEADLINE: <2017-12-06 Wed>
 
 
-* TODO Plunger App Stuff
-* TODO Call Will at Big Spring
-* TODO Review Bank Proposal
-  DEADLINE: <2017-08-24 Thu>
-* TODO Possible people to hire
-** Jacob Holt
-+ Solids Controls Technician
-+ Wind Tech
-+ Mud Crew
-** Colton Lavielle
-+ Parts Specialist
-+ Forklift certified
-** Brandon Melkus
-+ Pumper 
-+ Lease Operator
-** Thomas King 
-+ Currently Self Employed
-** Michael Bennet
-+ In Oklahoma
-+ I & E Tech
-** Steve Coutee
-+ Leak Survey Tech
-** Charles Fuller 
-+ Mostly IT guy
-** Mark Boardman
-+ Service Technician (Construction)
-** Christopher Bowen
-+ Top Golf
-* TODO Create Call Order for Vern
-* TODO Find out about hardesty
+* TODO Call badlands provider for Wapiti 
+  DEADLINE: <2017-12-11 Mon>
 
+* TODO Call Tapstone contact that Andrew sent me 
+  DEADLINE: <2017-12-11 Mon>
+
+
+* TODO Call Will Taylor about Oliphant 
+  DEADLINE: <2017-12-14 Thu>
+
+* TODO Issues for HMI 
+  DEADLINE: <2017-12-14 Thu>
+
+** DONE HMI parameters need to show location or at least pid
+
+** TODO Overflow on status groups input
+** TODO Status button too high 
+** TODO Need to add in row labeling for Table
+*** TODO One way would be making a table cell have a constant of text
+** TODO Need a way to change text color and making 
+** TODO Copy an object to make creating new things faster 
+** TODO Non-Scientific numbers in table 
+** TODO Sluggish search response
+** TODO Make pump change colors
+*** TODO Just like status button make colors selectable 
+** DONE Image Set tool 
+Tool that allows a group of images to be represented and flipped through 
+according to parameter state
+** TODO HMI adding parameters weirdness
++ make an element, hit save hmi without adding to the window... now it is made (but not really ) 
+** DONE go over search 
+
+** TODO Make design preview selection for color in status window 
+right now it always shows the color of the current status but making it so you can select which one is shown in design mode would maybe be nice
+
+** TODO Make an "are yo usure" when you have made changes to an HMI feature without saving 
+
+** TODO Conditional Visibility 
+
+** TODO Make writeability selectable
