--- a/calendar.org
+++ b/calendar.org
@@ -1,480 +1,295 @@
-* Onping Training Session
+* Gus Interview
   :PROPERTIES:
-  :LOCATION: Claremore, OK, USA
-  :LINK: [[https://www.google.com/calendar/event?eid=N2drdTVjbW5mbTdpaGhidGNoazlmY3B1OWcgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 7gku5cmnfm7ihhbtchk9fcpu9g
+  :LINK: [[https://www.google.com/calendar/event?eid=Nm92MDZwOXY5OHU5bjFoaXRrdmI2cXN2aXEgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 6ov06p9v98u9n1hitkvb6qsviq
   :END:
 
-  <2017-09-27 Wed 08:00-15:00>
-* Finish 401k plan
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NmhoamFjaGw2b3MzMmI5bjZwZ2phYjlrY2NwNmNiOW82cGgzMGJiMWNoajNhbzlqNmRoM2VwOWs2MCBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 6hhjachl6os32b9n6pgjab9kccp6cb9o6ph30bb1chj3ao9j6dh3ep9k60
-  :END:
-
-  <2017-09-29 Fri 10:00-11:00>
-* internship interview
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MDM4cmJuaWlpZDUyc21zYXN1dDRydnZrbDUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 038rbniiid52smsasut4rvvkl5
-  :END:
-
-  <2017-10-05 Thu 15:00-16:00>
-* Qianyun, Zhu (Chanyoon)
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MHFoaW12c3FnbHF1YXNpazMzYmVhdjJhZjkgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 0qhimvsqglquasik33beav2af9
-  :END:
-
-  <2017-10-06 Fri 11:00-12:00>
-* Charity
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxNzEwMDggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 38tq10i8a727rlq5lqqrrbjoho_20171008
-  :END:
-
-  <2017-10-08 Sun>
-* Montello 330
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NzByajRjOWtjNG82NmI5bzc0cm0yYjlrNjloajZiOW82NHEzNmI5bjc1aTNhY2I0Y3BoamdkcG82ZyBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 70rj4c9kc4o66b9o74rm2b9k69hj6b9o64q36b9n75i3acb4cphjgdpo6g
-  :END:
-
-  <2017-10-11 Wed 15:00-16:00>
-* Edward
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NWo0OGV2aTFobWkybjB1djI3aHFwMXU1NHQgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 5j48evi1hmi2n0uv27hqp1u54t
-  :END:
-
-  <2017-10-12 Thu 14:00-15:00>
-* Control the world with text!: making CLI tools with Node
+  <2018-04-24 Tue 10:30-11:30>
+* Elixir Beginnings
   :PROPERTIES:
   :LOCATION: 1141 W Sheridan Ave, Oklahoma City, OK
-  :LINK: [[https://www.google.com/calendar/event?eid=NjlqMzhjMWpjNHJtYWI5aWNjb202YjlrNm9ybTZiOW83NWhqZ2JiMTY4cTNlZGo1NzVobWFwYjU2cyBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 69j38c1jc4rmab9iccom6b9k6orm6b9o75hjgbb168q3edj575hmapb56s
+  :LINK: [[https://www.google.com/calendar/event?eid=NjlobTRwYjU2MWg2YWJiNGNjcW00YjlrY2tzM2FiOW82Z3FqZ2JiMzZzcTNlZTM1NjhzamNwMzI3NCBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: 69hm4pb561h6abb4ccqm4b9kcks3ab9o6gqjgbb36sq3ee3568sjcp3274
   :END:
 
-  <2017-10-17 Tue 11:30-12:30>
+  <2018-04-24 Tue 11:30-12:30>
 
-About 'Control the world with text!: making CLI tools with Node':
+Food is provided. Please RSVP before 9am the day of because your RSVP's contribute towards how much funding we have for the food.
 
-Let's make a CLI in node! In this talk we'll take a simple app and make a CLI tool for it. We'll cover everything from making it executable, distribution, testing, and best practices.
+Speaker: Sameeri Marryboyina
 
-More details coming soon!
+Topic: An introduction to the language built on the legendary Erlang Virtual Machine. This talk will cover history, philosophy, approaches, language constructs, concurrency primitives, and a glimpse at the growing and wonderful ecosystem that Elixir has with an intention that it will invoke an interest in your heart to go and discover more for yourself.
 
-About Ryan LaBouve:
+Speaker Bio: Sameeri is an Oseberg Engineer and OU alum. He is passionate about continuous self-improvement (Kaizen).
 
-Product engineer at Envoy. Last seen on the internet. Usually spotted wearing a black shirt with jeans. Loves talking to people and having coffee with strangers.
-
-Follow Ryan at @RyanLaBouve (https://twitter.com/RyanLaBouve)
-
-Details: https://www.meetup.com/OKC-js/events/244051442/
-* Control the world with text!: making CLI tools with Node
+Details: https://www.meetup.com/OKC-FP/events/249597646/
+* Elixir Beginnings
   :PROPERTIES:
-  :LOCATION: StarSpace46, 1141 W Sheridan Ave, Oklahoma City, OK, us, 73106
-  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVncDZhYzltZTVvbWFvcGllb3FtMnRiMzY1a202czNtZGhyNzZkMXBla3A3NnBwZzZwaDcyc2o1YzVqajhxamJkc3JqYXNqamNwcDZjcTFtNjVrMzAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: _6tlnaqrle5p6cpb4dhmj4phpegp6ac9me5omaopieoqm2tb365km6s3mdhr76d1pekp76ppg6ph72sj5c5jj8qjbdsrjasjjcpp6cq1m65k30
+  :LOCATION: StarSpace 46 (1141 W Sheridan Ave, Oklahoma City, OK)
+  :LINK: [[https://www.google.com/calendar/event?eid=NzRxMzZwajRjOWkzNGJiMzcxZ2oyYjlrNmtzamNiYjI2OHIzYWI5aGM5aTM0cDFqNzRvajBlOXBjNCBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: 74q36pj4c9i34bb371gj2b9k6ksjcbb268r3ab9hc9i34p1j74oj0e9pc4
   :END:
 
-  <2017-10-17 Tue 11:30-12:30>
-
-To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
-
-This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DPxiXPZr6EjI3m0FYJJmTcq73fcwA2azhk
-* Tulsa Meeting Scout
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=NmMzaDI4MDNnYTRqc2lvdDdpcHE4djRyY3Mgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 6c3h2803ga4jsiot7ipq8v4rcs
-  :END:
-
-  <2017-10-18 Wed 07:30-10:30>
-* Stay at Four Points by Sheraton Charleston
-  :PROPERTIES:
-  :LOCATION: 600 Kanawha Boulevard East, Charleston, WV 25301, USA
-  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVobjcwcWI4Y3RyN2Fwcm1lZ3NtdWQxZ2NrcDM4b3BnZWRvamdjM2xla3FtZ3FiamVsbW4wY3BoZTByNzBjcmNla3FqY29yZjY1b21tZTlqNzFrNmUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: _6tlnaqrle5p6cpb4dhmj4phpehn70qb8ctr7aprmegsmud1gckp38opgedojgc3lekqmgqbjelmn0cphe0r70crcekqjcorf65omme9j71k6e
-  :END:
-
-  <2017-10-19 Thu>--<2017-10-20 Fri>
-
-To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
-
-This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DOD6wLJlmVVWj1lC8IEmzQbF1pJZah75ZY
-* Simon Meeting
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=M2MyN2xwZzBnaW11bmQwdTRzOTF2cmZpcXAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 3c27lpg0gimund0u4s91vrfiqp
-  :END:
-
-  <2017-10-23 Mon 09:30-10:30>
-* 10 Lessons From Running a Digital Marketing Agency for 14 Years
-  :PROPERTIES:
-  :LOCATION: 1141 W Sheridan Ave, Oklahoma City, OK
-  :LINK: [[https://www.google.com/calendar/event?eid=NjhwajBwMXA2aGkzNGJiNjZ0Z2pnYjlrY2NvM2FiOXA2a3FtYWI5bmNsZ2oyY2hsNjFpM2lkOWs2YyBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 68pj0p1p6hi34bb66tgjgb9kcco3ab9p6kqmab9nclgj2chl61i3id9k6c
-  :END:
-
-  <2017-10-25 Wed 11:30-12:30>
-
-Tim Priebe started T&S Online Marketing in 2003. He will share 10 lessons he's learned from hackers, customers, mistakes, employees, and successes over the course of 14 years in business.
-
-About Tim Priebe:
-
-Tim Priebe is a public speaker, columnist, author of multiple digital marketing books, and the owner of T&S Online Marketing. He has been working on websites since 1997, and regularly assists clients with online marketing, including websites, social media, email newsletters, blogging, search engines, and online video.
-
-Please view the map below for parking information about Starspace46.
-
-https://secure.meetupstatic.com/photos/event/e/8/a/0/600_463559552.jpeg
-
-Details: https://www.meetup.com/Refresh-OKC/events/242408549/
-* 10 Lessons From Running a Digital Marketing Agency for 14 Years
+  <2018-04-24 Tue 11:30-12:30>
+* Elixir Beginnings
   :PROPERTIES:
   :LOCATION: StarSpace 46, 1141 W Sheridan Ave, Oklahoma City, OK, us, 73106
-  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVocWo2b2JlNjFpNjhjYjNlY3M3MHNyOWM4cm11cGplNmRubW9wM2FjNWduMGMxaGRoam4wdGpsZGhvbWlkYmplbHE2aXQxazZocDNnc2I2NzRyMzAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: _6tlnaqrle5p6cpb4dhmj4phpehqj6obe61i68cb3ecs70sr9c8rmupje6dnmop3ac5gn0c1hdhjn0tjldhomidbjelq6it1k6hp3gsb674r30
+  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVoazc0c2poY3RxbTJyamVjdG43OHRqbGNob2owcWhvZWNvajZyaG5kcGk2Y2Nwa2RkbTM0cmo1ZHBoNmdxYjdkZG5qZ3ByN2NkbzNpcTlvNzVrNmUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: _6tlnaqrle5p6cpb4dhmj4phpehk74sjhctqm2rjectn78tjlchoj0qhoecoj6rhndpi6ccpkddm34rj5dph6gqb7ddnjgpr7cdo3iq9o75k6e
   :END:
 
-  <2017-10-25 Wed 11:30-12:30>
+  <2018-04-24 Tue 11:30-12:30>
 
 To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
-
-This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DPyuMm0f7XLPz_qhf9VwMlOem9ZaRpF0qY
-* Check on Employees
+* Garret
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEwMjdUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171027T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=MGowNzBvaWV1ODVnZDA5azJuamlqYWNxNXUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 0j070oieu85gd09k2njijacq5u
   :END:
 
-  <2017-10-27 Fri 18:00-18:05>
-* Check on Employees
+  <2018-04-25 Wed 13:30-14:30>
+* Garret Francis Tuttle
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEwMzBUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171030T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=Nm0wYWpxMG50M2l0a25jbGVobjU2bHA5bGsgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 6m0ajq0nt3itknclehn56lp9lk
   :END:
 
-  <2017-10-30 Mon 18:00-18:05>
-* Reactive Streams
+  <2018-04-25 Wed 13:30-14:30>
+* Julian
   :PROPERTIES:
-  :LOCATION: StarSpace 46, 1141 W Sheridan Ave, Oklahoma City, OK, us, 73106
-  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVoaDY0cGhsZWhsbWlwYmRkdGszZWNocGVkazZhcHI5NjltbWNvOWc2cGgzY2RybGU0b242b2JkZWxsbjhlM2c2ZGg3MGRibGUwcjcycmJjNmdvNmUgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: _6tlnaqrle5p6cpb4dhmj4phpehh64phlehlmipbddtk3echpedk6apr969mmco9g6ph3cdrle4on6obdelln8e3g6dh70dble0r72rbc6go6e
+  :LINK: [[https://www.google.com/calendar/event?eid=MmJyZDVxcDBpYWI3NzRnMHA5bGE4cnZrZzcgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 2brd5qp0iab774g0p9la8rvkg7
   :END:
 
-  <2017-10-31 Tue 11:30-12:30>
-
-To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
-
-This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DMwj1irJWrFeJChWqNQbRqDbRtrVvG-1qI
-* Check on Employees
+  <2018-04-26 Thu 08:45-09:45>
+* Julian
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEwMzFUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171031T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NmNxM2NjaG1jOHM2OGJiMzZjcWpjYjlrNjBzMzBiOW83NHNqY2JiNTZ0Z2pnZDMyY2dwajRkaGw2byBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: 6cq3cchmc8s68bb36cqjcb9k60s30b9o74sjcbb56tgjgd32cgpj4dhl6o
   :END:
 
-  <2017-10-31 Tue 18:00-18:05>
-* Check on Employees
+  <2018-04-26 Thu 13:30>
+* Valient Midstream
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDFUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171101T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=MmlnaHJ0Yjdia3EwYmFvY3Fjcjk0Z2dsMzIgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 2ighrtb7bkq0baocqcr94ggl32
   :END:
 
-  <2017-11-01 Wed 18:00-18:05>
-* Blink reset problem meeting
+  <2018-05-01 Tue 10:30-11:30>
+* Kevin Taggart Evaluation
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MGwwajcxMDZkZXJlZXExNm45NHV1Z2pta3Egc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 0l0j7106dereeq16n94uugjmkq
+  :LINK: [[https://www.google.com/calendar/event?eid=NTdvNHVrbWtpaDRqNXFyOWd2bGQ0ZGJ2Z20gc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 57o4ukmkih4j5qr9gvld4dbvgm
   :END:
 
-  <2017-11-02 Thu 08:00-09:00>
-* Check on Employees
+  <2018-05-03 Thu 14:30-15:30>
+* Jennifer Davis
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDJUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171102T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=amcydGxqMThtMDNvdTBnZmtnY2puamtvcjggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: jg2tlj18m03ou0gfkgcjnjkor8
   :END:
 
-  <2017-11-02 Thu 18:00-18:05>
-* Check on Employees
+  <2018-05-04 Fri 14:00-14:30>
+* Victoria Rodriguez
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDNUMjMwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171103T230000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NW5tNTB0NTc2b2VmZDBwZzlzb29sZjZzc28gc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 5nm50t576oefd0pg9soolf6sso
   :END:
 
-  <2017-11-03 Fri 18:00-18:05>
-* Check on Employees
+  <2018-05-04 Fri 14:30-14:45>
+* Alicia Horton
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDdUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171107T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NXJjMXExMjRhNW5qN2g1dHYzbWpxazEzYjAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 5rc1q124a5nj7h5tv3mjqk13b0
   :END:
 
-  <2017-11-06 Mon 18:00-18:05>
-* Next Frontend meeting
+  <2018-05-04 Fri 14:45-15:00>
+* Kathryn Peralta
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=M3IzcnJtbDVjbzNxOG03cG83amFna2Jkbm4gc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 3r3rrml5co3q8m7po7jagkbdnn
+  :LINK: [[https://www.google.com/calendar/event?eid=NTB1dDNiYmVzaGhiaGlycG5zZTM2a291N2cgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 50ut3bbeshhbhirpnse36kou7g
   :END:
 
-  <2017-11-07 Tue 00:00-01:00>
-* Check on Employees
+  <2018-05-04 Fri 15:00-15:30>
+* Tiffany Chaires
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDhUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171108T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NTJlM21lZTNlY3VsMW42b2g0MGtmY291NG4gc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 52e3mee3ecul1n6oh40kfcou4n
   :END:
 
-  <2017-11-07 Tue 18:00-18:05>
-* Check on Employees
+  <2018-05-04 Fri 15:30-16:00>
+* Camri Cross
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMDlUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171109T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NjZkbWV2NjlrNzgzbjNzaWthNm90cTNoNGcgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 66dmev69k783n3sika6otq3h4g
   :END:
 
-  <2017-11-08 Wed 18:00-18:05>
-* Check on Employees
+  <2018-05-07 Mon 15:00-15:30>
+* Pride energy SCADA setup
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTBUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171110T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NDdlbms2N3NjZmQ4OXRxN2M0amxmdDVnMjAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 47enk67scfd89tq7c4jlft5g20
   :END:
 
-  <2017-11-09 Thu 18:00-18:05>
-* Check on Employees
+  <2018-05-08 Tue 11:00-12:00>
+* Call field service candidate Joel
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTFUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171111T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=N2xrdXJqbWtrb2k2dGdkMzA2am41dWxmYmggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 7lkurjmkkoi6tgd306jn5ulfbh
   :END:
 
-  <2017-11-10 Fri 18:00-18:05>
+  <2018-05-08 Tue 17:30-18:30>
+* Kendall Eval
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=M2o1cDcwMzQzdDNqMmdqNXF0MzBlc29qM3Egc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 3j5p70343t3j2gj5qt30esoj3q
+  :END:
+
+  <2018-05-09 Wed 09:00-10:00>
+* Scott Fleischman
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=M2Nta2djNHNzdjBwdTY0bW9tNjhybzRvNWwgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 3cmkgc4ssv0pu64mom68ro4o5l
+  :END:
+
+  <2018-05-09 Wed 10:00-11:00>
+* Unitronics
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=N2x2bjV2amM4MWtwOGJ1Y3ExNTE2amwwMTAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 7lvn5vjc81kp8bucq1516jl010
+  :END:
+
+  <2018-05-10 Thu 11:00-12:00>
+* Patrick Eval
+  :PROPERTIES:
+  :LINK: [[https://www.google.com/calendar/event?eid=MDBrc282czZyajlrZ2NubmNxY2lqc3ZrNWEgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 00kso6s6rj9kgcnncqcijsvk5a
+  :END:
+
+  <2018-05-11 Fri 09:00-10:00>
 * Charity
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxNzExMTIgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 38tq10i8a727rlq5lqqrrbjoho_20171112
+  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxODA1MTMgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 38tq10i8a727rlq5lqqrrbjoho_20180513
   :END:
 
-  <2017-11-12 Sun>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTRUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171114T000000Z
-  :END:
-
-  <2017-11-13 Mon 18:00-18:05>
+  <2018-05-13 Sun>
 * Oil Change
   :PROPERTIES:
   :LOCATION: House
-  :LINK: [[https://www.google.com/calendar/event?eid=ZmJodHFmM2tuOHFjNjI5NjBxamRybnZnYWdfMjAxNzExMTRUMTIwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: fbhtqf3kn8qc62960qjdrnvgag_20171114T120000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=ZmJodHFmM2tuOHFjNjI5NjBxamRybnZnYWdfMjAxODA1MTRUMTEwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: fbhtqf3kn8qc62960qjdrnvgag_20180514T110000Z
   :END:
 
-  <2017-11-14 Tue 06:00-07:00>
-* Check on Employees
+  <2018-05-14 Mon 06:00-07:00>
+* Jake Interview
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTVUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171115T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=MDBiNjUwYWZnOWxlNDg2bzh2ZDZxYmdtNWggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 00b650afg9le486o8vd6qbgm5h
   :END:
 
-  <2017-11-14 Tue 18:00-18:05>
-* Check on Employees
+  <2018-05-15 Tue 09:30-10:30>
+* Change the Game with IndexedDB (Carmen Bourlon)
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTZUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171116T000000Z
+  :LOCATION: StarSpace46, 1141 W Sheridan Ave, Oklahoma City, OK, us, 73106
+  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVoazc0cDMzY3NwbmFwOWlkcGs2a3NqZWRkbjZhcGoyY2xvNjJwcm1lMG9tYXBqbGVwbW11b2JqNmxrM2NzaGxjdHI2NHQ5cGM5azNlb2prY2dzajAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: _6tlnaqrle5p6cpb4dhmj4phpehk74p33cspnap9idpk6ksjeddn6apj2clo62prme0omapjlepmmuobj6lk3cshlctr64t9pc9k3eojkcgsj0
   :END:
 
-  <2017-11-15 Wed 18:00-18:05>
-* Check on Employees
+  <2018-05-15 Tue 11:30-12:30>
+
+To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
+
+This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DMt0npvS2Mzjvey5uNut3nKZ6bMJv3kYBY
+* Kevin Review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMTdUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171117T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=MmZlMDR2a2o1bTFzZDJmdWlvZzZnaG0wZmogc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 2fe04vkj5m1sd2fuiog6ghm0fj
   :END:
 
-  <2017-11-16 Thu 18:00-18:05>
-* Check on Employees
+  <2018-05-17 Thu 14:00-15:00>
+* Michael Review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMThUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171118T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NnVpbzQ2MTZpbXU2NmdpcWVkMnIya201bzAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 6uio4616imu66giqed2r2km5o0
   :END:
 
-  <2017-11-17 Fri 18:00-18:05>
-* Check on Employees
+  <2018-05-17 Thu 15:00-16:00>
+* Atlee Review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjFUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171121T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=NmRpaWRrNTlybGUydTBpYWJhcWVwZnMycDggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 6diidk59rle2u0iabaqepfs2p8
   :END:
 
-  <2017-11-20 Mon 18:00-18:05>
-* Check on Employees
+  <2018-05-18 Fri 09:00-10:00>
+* Marketing strategy and review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjJUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171122T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA1MThUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180518T160000Z
   :END:
 
-  <2017-11-21 Tue 18:00-18:05>
-* Check on Employees
+  <2018-05-25 Fri 11:00-12:00>
+* Marketing strategy and review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjNUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171123T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA2MDFUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180601T160000Z
   :END:
 
-  <2017-11-22 Wed 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjRUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171124T000000Z
-  :END:
-
-  <2017-11-23 Thu 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjVUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171125T000000Z
-  :END:
-
-  <2017-11-24 Fri 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjhUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171128T000000Z
-  :END:
-
-  <2017-11-27 Mon 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMjlUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171129T000000Z
-  :END:
-
-  <2017-11-28 Tue 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzExMzBUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171130T000000Z
-  :END:
-
-  <2017-11-29 Wed 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDFUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171201T000000Z
-  :END:
-
-  <2017-11-30 Thu 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDJUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171202T000000Z
-  :END:
-
-  <2017-12-01 Fri 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDVUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171205T000000Z
-  :END:
-
-  <2017-12-04 Mon 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDZUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171206T000000Z
-  :END:
-
-  <2017-12-05 Tue 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDdUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171207T000000Z
-  :END:
-
-  <2017-12-06 Wed 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDhUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171208T000000Z
-  :END:
-
-  <2017-12-07 Thu 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMDlUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171209T000000Z
-  :END:
-
-  <2017-12-08 Fri 18:00-18:05>
+  <2018-06-01 Fri 11:00-12:00>
 * Charity
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxNzEyMTAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
-  :ID: 38tq10i8a727rlq5lqqrrbjoho_20171210
+  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxODA2MTAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 38tq10i8a727rlq5lqqrrbjoho_20180610
   :END:
 
-  <2017-12-10 Sun>
-* Check on Employees
+  <2018-06-10 Sun>
+* Marketing strategy and review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTJUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171212T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA2MTVUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180615T160000Z
   :END:
 
-  <2017-12-11 Mon 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTNUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171213T000000Z
-  :END:
-
-  <2017-12-12 Tue 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTRUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171214T000000Z
-  :END:
-
-  <2017-12-13 Wed 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTVUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171215T000000Z
-  :END:
-
-  <2017-12-14 Thu 18:00-18:05>
-* Check on Employees
-  :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTZUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171216T000000Z
-  :END:
-
-  <2017-12-15 Fri 18:00-18:05>
+  <2018-06-15 Fri 11:00-12:00>
 * Rotate Tires
   :PROPERTIES:
   :LOCATION: Freddies Tires
-  :LINK: [[https://www.google.com/calendar/event?eid=bDZvYzYwMHM0NmY3anAxN3E4bmRzaWhuZ2tfMjAxNzEyMTZUMTgwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: l6oc600s46f7jp17q8ndsihngk_20171216T180000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bDZvYzYwMHM0NmY3anAxN3E4bmRzaWhuZ2tfMjAxODA2MTZUMTcwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: l6oc600s46f7jp17q8ndsihngk_20180616T170000Z
   :END:
 
-  <2017-12-16 Sat 12:00-13:00>
+  <2018-06-16 Sat 12:00-13:00>
 
 Rotate Brooke's Tires
-* Check on Employees
+* Marketing strategy and review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMTlUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171219T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA2MjlUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180629T160000Z
   :END:
 
-  <2017-12-18 Mon 18:00-18:05>
-* Check on Employees
+  <2018-06-29 Fri 11:00-12:00>
+* Stay at Premier RV Resort
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMjBUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171220T000000Z
+  :LOCATION: 33022 Van Duyn Rd, Coburg, OR 97408, United States
+  :LINK: [[https://www.google.com/calendar/event?eid=XzZ0bG5hcXJsZTVwNmNwYjRkaG1qNHBocGVoaDdjZTNjY2dzNm1yMzFja3I3NmRqN2Vjb2ppcjMyZXBobTZyYmJjZ29uOGNyajZkbW1vcTNjYzltbmN0M2dkZG03MG9qYWU5aDNnZTMzZHNzMzAgc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: _6tlnaqrle5p6cpb4dhmj4phpehh7ce3ccgs6mr31ckr76dj7ecojir32ephm6rbbcgon8crj6dmmoq3cc9mnct3gddm70ojae9h3ge33dss30
   :END:
 
-  <2017-12-19 Tue 18:00-18:05>
-* Check on Employees
+  <2018-07-07 Sat>--<2018-07-09 Mon>
+
+To see detailed information for automatically created events like this one, use the official Google Calendar app. https://g.co/calendar
+
+This event was created from an email you received in Gmail. https://mail.google.com/mail?extsrc=cal&plid=ACUX6DPzPJgZWM4e8mwcKB0yYe7s_yLejuCzEjw
+* Charity
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMjFUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171221T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=Mzh0cTEwaThhNzI3cmxxNWxxcXJyYmpvaG9fMjAxODA3MDggc2NvdHRtdXJwaHkwOUBt][Go to gcal web page]]
+  :ID: 38tq10i8a727rlq5lqqrrbjoho_20180708
   :END:
 
-  <2017-12-20 Wed 18:00-18:05>
-* Check on Employees
+  <2018-07-08 Sun>
+* Marketing strategy and review
   :PROPERTIES:
-  :LINK: [[https://www.google.com/calendar/event?eid=MmNuZm1pNjM1ZWgxdmc5NGZ1cnFkNnVpbmJfMjAxNzEyMjJUMDAwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
-  :ID: 2cnfmi635eh1vg94furqd6uinb_20171222T000000Z
+  :LINK: [[https://www.google.com/calendar/event?eid=bWtzMWxycjh0ZHZtOTA1Ym5nOWc4djRuZW9fMjAxODA3MTNUMTYwMDAwWiBzY290dG11cnBoeTA5QG0][Go to gcal web page]]
+  :ID: mks1lrr8tdvm905bng9g8v4neo_20180713T160000Z
   :END:
 
-  <2017-12-21 Thu 18:00-18:05>
+  <2018-07-13 Fri 11:00-12:00>
